# dflash-mlx

./: .gitignore  ADDING_MODELS.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
assets/: README.md  benchmark-chart.html
assets/captures/: dflash_4bit.json  dflash_bf16.json  llama_cpp.json  llama_cpp_q4.json  mlx_4bit.json  mlx_bf16.json
benchmarks/: README.md  metrics_history.csv  qwen35-results.md  summary.csv
dflash_mlx/: __init__.py  adapters.py  api.py  bet_optimal_drafting.py  chat_cli.py  cli.py  custom_qwen35_model.py  ddtree.py  draft.py  history.py  inspect_cli.py  openai_server.py  runtime.py
docs/: architecture.md  benchmarks.md
examples/: python_api.py
experiments/: README.md  run_dflash_mps.py
prompts/: functional_equation.txt
scripts/: backfill_chat_history.py  benchmark_history.py  benchmark_mlx.py  capture_generations.py  capture_generations_4bit.py  custom_qwen35_dflash_model.py  diagnose_dflash_acceptance.py  generate_benchmark_chart.py  generate_demo_video.py  generate_demo_video_4bit.py  generate_qwen_comparison_chart.py  inspect_mlx_qwen35.py  mlx_dflash_adapters.py  mlx_dflash_draft.py  mlx_dflash_runtime.py  prepare_custom_mlx_model.py  run_dflash_mlx.py
tests/: test_openai_server.py  test_project_scripts.py  test_runtime_helpers.py  test_smoke.py
tools/: README.md  backfill_chat_history.py  capture_generations.py  capture_generations_4bit.py  generate_demo_video.py  generate_demo_video_4bit.py
