[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dflash-mlx"
version = "0.1.0"
description = "DFlash speculative decoding on Apple Silicon with MLX"
requires-python = ">=3.10"
dependencies = [
    "mlx",
    "mlx-lm",
    "huggingface-hub",
    "datasets",
    "numpy",
]

[project.scripts]
dflash-mlx = "dflash_mlx.cli:main"
dflash-mlx-bench = "dflash_mlx.benchmark_cli:main"
dflash-mlx-chat = "dflash_mlx.chat_cli:main"
dflash-mlx-inspect = "dflash_mlx.inspect_cli:main"
dflash-mlx-prepare-model = "dflash_mlx.model_prep:main"

[tool.setuptools.packages.find]
include = ["dflash_mlx*"]
